--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -1,8 +1,7 @@
 name: Latest YouTube Videos
 on:
   schedule:
-    # Runs every hour, on the hour
-    - cron: "0 * * * *"
+    - cron: '0 0 * * *' # Run once a day at midnight
   workflow_dispatch:
 
 jobs:
